--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Gidole&display=swap");
+
 :root {
   --primary-color: #b8252e;
-  --secondary-color: #1e0013;
-  --accent-color: #ffffff;
+  --secondary-color: #1a1a1a;
+  --accent-color: #f5f5f5;
   --tertiary-color: #8a1c23;
+  --alternate-color: #f6c65c;
+  --contrast-color: #2e86c1;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Gidole", sans-serif;
   margin: 0;
   padding: 0;
   background-color: var(--accent-color);
@@ -18,6 +22,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  width: -webkit-fill-available;
   padding: 1rem 2rem;
   background-color: var(--primary-color);
   color: var(--accent-color);
@@ -44,9 +50,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5rem 2rem;
-  background-color: var(--secondary-color);
-  color: var(--accent-color);
+  padding: 6rem 2rem;
+  color: var(--secondary-color);
   text-align: left;
 }
 
@@ -55,15 +60,21 @@ body {
 }
 
 .about-image {
-  width: 200px;
+  width: 400px;
   height: auto;
   margin-left: 2rem;
   border-radius: 12px;
 }
 
 /* GRID SECTION */
+.container-grid {
+  display: flex;
+  justify-content: center;
+}
+
 .grid-section {
   display: grid;
+  max-width: 70vw;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(150px, auto);
   gap: 1.5rem;
@@ -75,12 +86,28 @@ body {
 }
 
 .card {
-  background-color: var(--primary-color);
+  border: 1px solid #2e86c1;
   padding: 2rem;
   text-align: center;
   border-radius: 12px;
   box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
-  color: var(--accent-color);
+  color: var(--secondary-color);
+}
+
+.paragraph {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.paragraph > p {
+  max-width: 600px;
+  max-height: 250px;
+  overflow-y: auto;
+}
+
+.project-logo {
+  width: 200px;
 }
 
 .card h3 {
@@ -133,7 +160,9 @@ body {
 /* FORM */
 .contact-form {
   text-align: center;
-  padding: 3rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 .input-field {
@@ -144,4 +173,35 @@ body {
   border: 1px solid var(--secondary-color);
   border-radius: 8px;
   font-size: 1rem;
+}
+
+.contact-form-container {
+  width: 800px;
+}
+
+/* RESPONSE FORM */
+#response {
+  display: none;
+  margin: 3rem 0;
+  text-align: center;
+}
+
+/* ANCHOR */
+.anchor-link {
+  background-color: #8a1c23;
+  border-radius: 50%;
+  width: 50px;
+  font-size: 26px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: #f5f5f5;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  height: 50px;
+}
+
+.anchor-link:hover {
+  cursor: pointer;
 }
